<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="btnLogin">Login</string>
    <string name="btnJouer">Jouer</string>
    <string name="btnQuitter">Quitter</string>
    <string name="txtPseudo">Pseudo</string>
    <string name="etxtPseudo">Pseudo</string>
    <string name="etxtPassword">Password</string>
    <string name="btnRetour">Retour</string>
    <string name="btnCreate">Creer</string>
    <string name="txtMonster">Monstres</string>
    <string name="btnMonster1">Vide</string>
    <string name="btnMonster2">Lvl:10</string>
    <string name="btnMonster3">Lvl:50</string>
    <string name="btnMonster4">Lvl:100</string>
    <string name="txtEggs">Oeufs</string>
    <string name="txtEggsName">Nom:</string>
    <string name="btnOeuf1">Oeuf</string>
    <string name="diaChoisir">Choisir</string>
    <string name="diaCancel">Annuler</string>
    <string name="etxtNomMonstre"></string>
    <string name="txtMonstre1">Monstre 1</string>
    <string name="txtMonstre2">Monstre 2</string>
    <string name="txtMonstre3">Monstre 3</string>
    <string name="txtMonstre4">Monstre 4</string>
    <string name="txtExp">0</string>
</resources>
