<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="60dp"
    tools:context="saucebrune.tamagotchi.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/etxtPseudo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text=""
        android:hint="@string/etxtPseudo"/>

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/etxtPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnLogin"
        android:onClick="onClickLogin"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnCreate"
        android:onClick="onClickCreate"/>

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnRetour"
        android:onClick="onClickRetour"/>

</LinearLayout>
