<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="75dp"
    tools:context="saucebrune.tamagotchi.MainActivity"
    android:background="@mipmap/ic_launcher">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/txtPseudo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:text="@string/txtPseudo"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnLogin"/>

    <Button
        android:id="@+id/btnJouer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnJouer"/>


    <Button
        android:id="@+id/btnQuitter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnQuitter"/>

</LinearLayout>
