<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="75dp"
    tools:context="saucebrune.tamagotchi.MainActivity">

    <!-- Ajouter toutes les table layout avec les imgaes et les metre
    visibility:gone -->

    <TextView
        android:id="@+id/txtMonster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/txtMonster"/>

    <Button
        android:id="@+id/btnMonster1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnMonster1"
        android:onClick="onClickChooseMonster"/>

    <TableLayout
        android:id="@+id/tblMonstre1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone">
        <TextView
            android:id="@+id/nomMonstre1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="6dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/txtMonstre1"
            android:background="@drawable/border"/>
    </TableLayout>

    <Button
        android:id="@+id/btnMonster2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnMonster2"
        android:enabled="false"
        android:onClick="onClickChooseMonster"/>

    <TableLayout
        android:id="@+id/tblMonstre2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone">
        <TextView
            android:id="@+id/nomMonstre2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="6dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/txtMonstre2"
            android:background="@drawable/border"/>
    </TableLayout>

    <Button
        android:id="@+id/btnMonster3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnMonster3"
        android:enabled="false"
        android:onClick="onClickChooseMonster"/>

    <TableLayout
        android:id="@+id/tblMonstre3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone">
        <TextView
            android:id="@+id/nomMonstre3"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="6dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/txtMonstre3"
            android:background="@drawable/border"/>
    </TableLayout>

    <Button
        android:id="@+id/btnMonster4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnMonster4"
        android:enabled="false"
        android:onClick="onClickChooseMonster"/>

    <TableLayout
        android:id="@+id/tblMonstre4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone">
        <TextView
            android:id="@+id/nomMonstre4"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="6dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/txtMonstre4"
            android:background="@drawable/border"/>
    </TableLayout>

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnRetour"
        android:onClick="onClickRetour"/>

</LinearLayout>
