<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="75dp"
    tools:context="saucebrune.tamagotchi.MainActivity">

    <TextView
        android:id="@+id/txtEggs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/txtEggs"/>

    <Button
        android:id="@+id/btnOeuf1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/btnOeuf1"
        android:onClick="onClickChooseEgg"/>

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btnRetour"
        android:onClick="onClickRetour"/>

</LinearLayout>
